[#1788] change of some style and layout to have a properly sized footer element in all browsers, and fix the footer appearance in IE <= 8.
This not only fixes IE7 behavior (the first half of the footer gray, the second half white), but also shows footer containers stretching properly to content in Firefox with Firebug element highlighting feature.
Side effect: there may be less white space below the three boxes in a empty homepage.

--- a/ckan/public/css/style.css
+++ b/ckan/public/css/style.css
@@ -109,14 +109,13 @@ html, body {
 }
 
 #wrap {
-    min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -230px;
+    margin: 0 auto 1%;
 }
 
 footer, #push {
-    height: 205px;
+    height: auto;
 }
 
 footer {
